--- a/okhttp-dnsoverhttps/pom.xml
+++ b/okhttp-dnsoverhttps/pom.xml
@@ -45,6 +45,7 @@
       <groupId>org.conscrypt</groupId>
       <artifactId>conscrypt-openjdk-uber</artifactId>
       <version>1.1.0</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
