--- a/okhttp-kotlin/pom.xml
+++ b/okhttp-kotlin/pom.xml
@@ -13,9 +13,9 @@
   <name>OkHttp Kotlin</name>
 
   <properties>
-    <kotlin.version>1.2.51</kotlin.version>
-    <kotlin.compiler.languageVersion>1.2</kotlin.compiler.languageVersion>
-    <kotlin.compiler.apiVersion>1.2</kotlin.compiler.apiVersion>
+    <kotlin.version>1.3-M1</kotlin.version>
+    <kotlin.compiler.languageVersion>1.3</kotlin.compiler.languageVersion>
+    <kotlin.compiler.apiVersion>1.3</kotlin.compiler.apiVersion>
   </properties>
 
   <dependencies>
@@ -38,7 +38,7 @@
     <dependency>
       <groupId>org.jetbrains.kotlinx</groupId>
       <artifactId>kotlinx-coroutines-core</artifactId>
-      <version>0.22.5</version>
+      <version>0.24.0-eap13</version>
     </dependency>
 
     <dependency>
@@ -64,6 +64,20 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <repositories>
+    <repository>
+      <id>kotlin-eap</id>
+      <url>http://dl.bintray.com/kotlin/kotlin-eap</url>
+    </repository>
+  </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>kotlin-eap</id>
+      <url>http://dl.bintray.com/kotlin/kotlin-eap</url>
+    </pluginRepository>
+  </pluginRepositories>
 
   <build>
     <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
