--- a/okhttp/pom.xml
+++ b/okhttp/pom.xml
@@ -19,7 +19,8 @@
     </dependency>
     <dependency>
       <groupId>org.conscrypt</groupId>
-      <artifactId>conscrypt-openjdk-uber</artifactId>
+      <artifactId>conscrypt-openjdk</artifactId>
+      <classifier>osx-x86_64</classifier>
       <scope>provided</scope>
     </dependency>
     <dependency>
