--- a/okhttp-dnsoverhttps/pom.xml
+++ b/okhttp-dnsoverhttps/pom.xml
@@ -43,8 +43,7 @@
     </dependency>
     <dependency>
       <groupId>org.conscrypt</groupId>
-      <artifactId>conscrypt-openjdk</artifactId>
-      <classifier>osx-x86_64</classifier>
+      <artifactId>conscrypt-openjdk-uber</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
