--- a/okhttp-tests/pom.xml
+++ b/okhttp-tests/pom.xml
@@ -46,14 +46,7 @@
     </dependency>
     <dependency>
       <groupId>org.conscrypt</groupId>
-      <artifactId>conscrypt-openjdk</artifactId>
-      <classifier>osx-x86_64</classifier>
-    </dependency>
-    <dependency>
-      <groupId>org.conscrypt</groupId>
-      <artifactId>conscrypt-openjdk</artifactId>
-      <version>${conscrypt.version}</version>
-      <classifier>osx-x86_64</classifier>
+      <artifactId>conscrypt-openjdk-uber</artifactId>
     </dependency>
 
     <dependency>
