--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
     <moshi.version>1.1.0</moshi.version>
     <jnr-unixsocket.version>0.19</jnr-unixsocket.version>
     <okio.version>1.15.0</okio.version>
-    <conscrypt.version>1.3.0-20180910.145715-6</conscrypt.version>
+    <conscrypt.version>1.3.0</conscrypt.version>
 
     <!-- Test Dependencies -->
     <junit.version>4.12</junit.version>
@@ -139,9 +139,8 @@
       </dependency>
       <dependency>
         <groupId>org.conscrypt</groupId>
-        <artifactId>conscrypt-openjdk</artifactId>
+        <artifactId>conscrypt-openjdk-uber</artifactId>
         <version>${conscrypt.version}</version>
-        <classifier>osx-x86_64</classifier>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -359,8 +358,7 @@
       <dependencies>
         <dependency>
           <groupId>org.conscrypt</groupId>
-          <artifactId>conscrypt-openjdk</artifactId>
-          <classifier>osx-x86_64</classifier>
+          <artifactId>conscrypt-openjdk-uber</artifactId>
         </dependency>
       </dependencies>
     </profile>
