--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 
     <module>okcurl</module>
     <module>mockwebserver</module>
+    <module>bom</module>
     <module>samples</module>
     <module>benchmarks</module>
   </modules>
