--- a/okhttp-kotlin/pom.xml
+++ b/okhttp-kotlin/pom.xml
@@ -13,7 +13,7 @@
   <name>OkHttp Kotlin</name>
 
   <properties>
-    <kotlin.version>1.3-M1</kotlin.version>
+    <kotlin.version>1.3.0</kotlin.version>
     <kotlin.compiler.languageVersion>1.3</kotlin.compiler.languageVersion>
     <kotlin.compiler.apiVersion>1.3</kotlin.compiler.apiVersion>
   </properties>
@@ -38,7 +38,7 @@
     <dependency>
       <groupId>org.jetbrains.kotlinx</groupId>
       <artifactId>kotlinx-coroutines-core</artifactId>
-      <version>0.24.0-eap13</version>
+      <version>1.0.0</version>
     </dependency>
 
     <dependency>
