--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.squareup.okhttp3</groupId>
     <artifactId>parent</artifactId>
-    <version>3.12.1</version>
+    <version>3.12.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>benchmarks</artifactId>
