--- a/samples/crawler/pom.xml
+++ b/samples/crawler/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.squareup.okhttp3.sample</groupId>
     <artifactId>sample-parent</artifactId>
-    <version>3.12.1</version>
+    <version>3.12.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>crawler</artifactId>
