--- a/samples/guide/pom.xml
+++ b/samples/guide/pom.xml
@@ -32,5 +32,10 @@
       <groupId>com.squareup.moshi</groupId>
       <artifactId>moshi</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.undertow</groupId>
+      <artifactId>undertow-core</artifactId>
+      <version>2.0.1.Final</version>
+    </dependency>
   </dependencies>
 </project>
