--- a/pom.xml
+++ b/pom.xml
@@ -661,5 +661,23 @@
         <alpn.jdk8.version>8.1.13.v20181017</alpn.jdk8.version>
       </properties>
     </profile>
+    <profile>
+      <id>alpn-when-jdk8_201</id>
+      <activation>
+        <jdk>1.8.0_201</jdk>
+      </activation>
+      <properties>
+        <alpn.jdk8.version>8.1.13.v20181017</alpn.jdk8.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>alpn-when-jdk8_202</id>
+      <activation>
+        <jdk>1.8.0_202</jdk>
+      </activation>
+      <properties>
+        <alpn.jdk8.version>8.1.13.v20181017</alpn.jdk8.version>
+      </properties>
+    </profile>
   </profiles>
 </project>
