--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: java
 
 jdk:
+  - openjdk8
   - openjdk11
 
 script:
-  - jdk_switcher use openjdk11
-  - export JAVA_HOME=$HOME/openjdk11
-  - $TRAVIS_BUILD_DIR/install-jdk.sh --install openjdk11 --target $JAVA_HOME
   - mvn test javadoc:jar source:jar -B
 
 after_success:
