--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,8 @@ language: java
 
 jdk:
   - oraclejdk8
-#  - openjdk11
-
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer # Updates JDK 8 to the latest available.
+  - openjdk8
+  - openjdk11
 
 script: mvn test javadoc:jar source:jar -B
 
