Try without errorprone temporarily

--- a/pom.xml
+++ b/pom.xml
@@ -146,29 +146,29 @@
   <build>
     <pluginManagement>
       <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-          <configuration>
-            <compilerId>javac-with-errorprone</compilerId>
-            <forceJavacCompilerUse>true</forceJavacCompilerUse>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
-          </configuration>
-          <dependencies>
-            <dependency>
-              <groupId>org.codehaus.plexus</groupId>
-              <artifactId>plexus-compiler-javac-errorprone</artifactId>
-              <version>2.8.5</version>
-            </dependency>
-            <dependency>
-              <groupId>com.google.errorprone</groupId>
-              <artifactId>error_prone_core</artifactId>
-              <version>2.3.2</version>
-            </dependency>
-          </dependencies>
-        </plugin>
+        <!--<plugin>-->
+          <!--<groupId>org.apache.maven.plugins</groupId>-->
+          <!--<artifactId>maven-compiler-plugin</artifactId>-->
+          <!--<version>3.8.0</version>-->
+          <!--<configuration>-->
+            <!--<compilerId>javac-with-errorprone</compilerId>-->
+            <!--<forceJavacCompilerUse>true</forceJavacCompilerUse>-->
+            <!--<source>${java.version}</source>-->
+            <!--<target>${java.version}</target>-->
+          <!--</configuration>-->
+          <!--<dependencies>-->
+            <!--<dependency>-->
+              <!--<groupId>org.codehaus.plexus</groupId>-->
+              <!--<artifactId>plexus-compiler-javac-errorprone</artifactId>-->
+              <!--<version>2.8.5</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+              <!--<groupId>com.google.errorprone</groupId>-->
+              <!--<artifactId>error_prone_core</artifactId>-->
+              <!--<version>2.3.2</version>-->
+            <!--</dependency>-->
+          <!--</dependencies>-->
+        <!--</plugin>-->
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
