--- a/pom.xml
+++ b/pom.xml
@@ -151,23 +151,9 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
           <configuration>
-            <!--<compilerId>javac-with-errorprone</compilerId>-->
-            <!--<forceJavacCompilerUse>true</forceJavacCompilerUse>-->
             <source>${java.version}</source>
             <target>${java.version}</target>
           </configuration>
-          <!--<dependencies>-->
-            <!--<dependency>-->
-              <!--<groupId>org.codehaus.plexus</groupId>-->
-              <!--<artifactId>plexus-compiler-javac-errorprone</artifactId>-->
-              <!--<version>2.8.5</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-              <!--<groupId>com.google.errorprone</groupId>-->
-              <!--<artifactId>error_prone_core</artifactId>-->
-              <!--<version>2.3.2</version>-->
-            <!--</dependency>-->
-          <!--</dependencies>-->
         </plugin>
 
         <plugin>
@@ -290,6 +276,57 @@
   </build>
 
   <profiles>
+    <profile>
+      <id>errorprone</id>
+      <activation>
+        <jdk>1.8</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.0</version>
+            <configuration>
+              <compilerId>javac-with-errorprone</compilerId>
+              <forceJavacCompilerUse>true</forceJavacCompilerUse>
+              <source>${java.version}</source>
+              <target>${java.version}</target>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>org.codehaus.plexus</groupId>
+                <artifactId>plexus-compiler-javac-errorprone</artifactId>
+                <version>2.8.5</version>
+              </dependency>
+              <dependency>
+                <groupId>com.google.errorprone</groupId>
+                <artifactId>error_prone_core</artifactId>
+                <version>2.3.2</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>javadoc-lenient</id>
+      <activation>
+        <jdk>11</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>3.0.1</version>
+            <configuration>
+              <failOnError>false</failOnError>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>alpn-when-jdk8</id>
       <activation>
