--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,12 @@ before_install:
   - mvn -N io.takari:maven:wrapper -Dmaven=3.6.0
   - echo "MAVEN_OPTS='-Dmaven.repo.local=$HOME/.m2/repository -Xmx1g -Dorg.slf4j.simpleLogger.showDateTime=true -Dorg.slf4j.simpleLogger.dateTimeFormat=HH:mm:ss:SSS'" > ~/.mavenrc
 
-script: ./mvnw test javadoc:jar source:jar -B
+install:
+  - ./mvnw dependency:resolve -B
+
+script:
+  - ./mvnw test -B
+  - ./mvnw javadoc:jar source:jar -B
 
 after_success:
   - .buildscript/deploy_snapshot.sh
