Fix some maven problems that are blocking the 3.13 release

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -74,4 +74,11 @@
     </dependencies>
   </dependencyManagement>
 
+  <distributionManagement>
+    <repository>
+      <id>sonatype-nexus-staging</id>
+      <name>Nexus Release Repository</name>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
 </project>
