Build with 3 JDK targets (#4568)
* Build with 3 targets

* Update maven

* remove jdk 12 ea

* Try without errorprone temporarily

* Still set 1.8

* javadoc tolerance

* Profiles for 10 + 11

* More tolerant

* JDK 11 test skipping

* Cleanup imports

* Link to github issues

* Support JDK 12 building

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,19 @@ language: java
 
 jdk:
   - oraclejdk8
-#  - openjdk11
+  - openjdk8
+  - openjdk11
 
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer # Updates JDK 8 to the latest available.
+before_install:
+  - mvn -N io.takari:maven:wrapper -Dmaven=3.6.0
+  - echo "MAVEN_OPTS='-Dmaven.repo.local=$HOME/.m2/repository -Xmx1g -Dorg.slf4j.simpleLogger.showDateTime=true -Dorg.slf4j.simpleLogger.dateTimeFormat=HH:mm:ss:SSS'" > ~/.mavenrc
 
-script: mvn test javadoc:jar source:jar -B
+install:
+  - ./mvnw dependency:resolve -B
+
+script:
+  - ./mvnw test -B
+  - ./mvnw javadoc:jar source:jar -B
 
 after_success:
   - .buildscript/deploy_snapshot.sh
