--- a/okhttp-tests/pom.xml
+++ b/okhttp-tests/pom.xml
@@ -78,6 +78,16 @@
       <version>1.1.3.v20160715</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mortbay.jetty.alpn</groupId>
+      <artifactId>jetty-alpn-agent</artifactId>
+      <version>2.0.7</version>
+    </dependency>
+    <dependency>
+      <groupId>com.ea.agentloader</groupId>
+      <artifactId>ea-agent-loader</artifactId>
+      <version>1.0.3</version>
+    </dependency>
   </dependencies>
 
   <build>
