--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,8 @@ jdk:
   - openjdk8
   - openjdk11
 
-before_install:
-  - mvn -N io.takari:maven:wrapper -Dmaven=3.6.0
-  - echo "MAVEN_OPTS='-Dmaven.repo.local=$HOME/.m2/repository -Xmx1g -Dorg.slf4j.simpleLogger.showDateTime=true -Dorg.slf4j.simpleLogger.dateTimeFormat=HH:mm:ss:SSS'" > ~/.mavenrc
-
-install:
-  - ./mvnw dependency:resolve -B || true
-
 script:
-  - ./mvnw -DskipTests package checkstyle:check -B
-  - ./mvnw test javadoc:jar source:jar -B
+ - ./gradlew check
 
 after_success:
   - .buildscript/deploy_snapshot.sh
